--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -13,167 +13,182 @@
 	</ul>
 </nav>
 
-<section class="TabContent" id="feedManagement">
-	{* Feeds management *}
-	<h2 class="TabContent-h2">Add a feed</h2>
-	<form method="post" action="#">
-		<p><input type="text" name="feed_url" id="feed_url" placeholder="Feed URL"/></p>
-		<p>Import tags as well? <input type="radio" name="import_tags_add" value="1" id="import_tags_yes" {$config->import_tags_from_feeds != 0 ? 'checked="checked"' : ''}/><label for="import_tags_yes"> Yes</label> <input type="radio" name="import_tags_add" value="0" id="import_tags_no" {$config->import_tags_from_feeds == 0 ? 'checked="checked"' : ''}/><label for="import_tags_no"> No</label></p>
-		<p>
-			<label for="feed_post">POST data to send to have access to the feed (JSON formatted)</label><br/>
-			<textarea name="feed_post" id="feed_post"></textarea>
-		</p>
-		<p><input class="Button" type="submit" value="Add feed"/><input type="hidden" name="token" value="{function="generate_token('add_feed')"}"/></p>
-	</form>
-	<h2 class="TabContent-h2">List of available feeds</h2>
-	{if="count($feeds) > 0"}
-		<table>
-			{$delete_feed_token=generate_token('delete_feed')}
-			{$refresh_feed_token=generate_token('refresh_feed')}
-			{loop="$feeds"}
-				<tr>
-					<td>{$value['title']}</td>
-					<td><a href="{$value['url']}">{$value['url']}</a></td>
-					<td>Edit</td>
-					<td><a href="settings.php?delete_feed={$value['id']}&amp;token={$delete_feed_token}">Delete</a></td>
-					<td><a href="settings.php?refresh_feed={$value['id']}&amp;token={$refresh_feed_token}">Refresh</a></td>
-				</tr>
-			{/loop}
-		</table>
-	{else}
-		<p>You did not add any feeds yet.</p>
-	{/if}
-</section>
-
-<section class="TabContent" name="synchronization" id="synchronization">
-	<form method="post" action="#">
-		<h2 class="TabContent-h2">Sync</h2>
-		<p>
-			<input type="radio" name="synchronization_type" id="synchronization_type_ajax" value="ajax" {if="$config->synchronization_type == 'ajax'"} checked="checked"{/if}/><label for="synchronization_type_ajax"> Ajax</label><br/>
-			Update the feeds in the background at each page call.
-		</p>
-		<p>
-			<input type="radio" name="synchronization_type" id="synchronization_type_cron" value="cron" {if="$config->synchronization_type == 'cron'"} checked="checked"{/if}/><label for="synchronization_type_cron"> Cron</label><br/>
-			Use a crontask to update the feeds regularly.
-		</p>
-
-	<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generateI_token('settings_form')"}"/>
-	</form>
-</section>
-
-<section class="TabContent" id="template">
-	<form method="post" action="#">
-		<h2 class="TabContent-h2">Template</h2>
-		<p>
-			<label for="template">Template: </label>
-			<select name="template" id="template">
-				{loop="$templates"}
-					<option value="{$value['path']}" {if="$value['current']"}selected="selected"{/if}>{$value['name']}</option>
-				{/loop}
-			</select>
-		</p>
-		<p>
-			Display entries: <br/>
-			<input type="radio" name="display_entries" id="display_entries_full" value="content" {if="$config->display_entries == 'content'"}checked="checked"{/if}/><label for="display_entries_full">Full entry</label><br/>
-			<input type="radio" name="display_entries" id="display_entries_desc" value="description" {if="$config->display_entries == 'description'"}checked="checked"{/if}/><label for="display_entries_desc">Only the description</label><br/>
-			<input type="radio" name="display_entries" id="display_entries_titles" value="title" {if="$config->display_entries == 'title'"}checked="checked"{/if}/><label for="display_entries_titles">Only titles</label>
-		</p>
-
-	<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generateI_token('settings_form')"}"/>
-	</form>
-</section>
-
-<section class="TabContent" id="user">
-	<form method="post" action="#">
-		<h2 class="TabContent-h2">User</h2>
-		<p>Leave these fields blank if you don't want to change your password.</p>
-		<p><label for="password">Password: </label><input type="password" name="password" id="password"/></p>
-		<p><label for="password_check">Password (confirmation): </label><input type="password" name="password_check" id="password_check"/></p>
-	
-	<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generateI_token('settings_form')"}"/>
-	</form>
-</section>
-
-<section class="TabContent" id="entries">
-	<form method="post" action="#">
-		<h2 class="TabContent-h2">Entries</h2>
-		<p>Tag entries from the tags in the feeds?
-			<input type="radio" name="import_tags_from_feeds" id="import_tags_from_feeds_yes" value="1" {if="$config->import_tags_from_feeds != 0"}checked="checked"{/if}/><label for="import_tags_from_feeds_yes">Yes</label>
-			<input type="radio" name="import_tags_from_feeds" id="import_tags_from_feeds_no" value="0" {if="$config->import_tags_from_feeds == 0"}checked="checked"{/if}/><label for="import_tags_from_feeds_no">No</label>
-		</p>
-		<p>
-			<label for="entries_to_keep">Number of entries to keep per feed (0 to keep all entries):</label>
-			<input type="number" name="entries_to_keep" id="entries_to_keep" value="{$config->entries_to_keep}"/>
-		</p>
-		<p>
-			<label for="entries_per_page">Entries per page:</label>
-			<input type="number" name="entries_per_page" id="entries_per_page" value="{$config->entries_per_page}"/>
-		</p>
-
-	<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generateI_token('settings_form')"}"/>
-	</form>
-</section>
-
-<section class="TabContent" id="sharing">
-	<form method="post" action="#">
-		<h2 class="TabContent-h2">Sharing</h2>
-		<p><label for="share_input_facebook">Facebook: </label><input type="checkbox" name="share_input_facebook" id="share_input_facebook" {if="$config->facebook_share > 0"}checked="checked"{/if} value="1"/></p>
-		<p><label for="share_input_twitter">Twitter: </label><input type="checkbox" name="share_input_twitter" id="share_input_twitter" {if="$config->twitter_share > 0"}checked="checked"{/if} value="1"/></p>
-		<p><label for="share_input_shaarli">Shaarli: </label><input type="text" name="share_input_shaarli" id="share_input_shaarli" placeholder="URL of your shaarli" {if="!empty($config->shaarli_share)"}value="{$config->shaarli_share}"{/if}/></p>
-		<p><label for="share_input_diaspora">Diaspora: </label><input type="text" name="share_input_diaspora" id="share_input_diaspora" placeholder="URL of your pod" {if="!empty($config->diaspora_share)"}value="{$config->diaspora_share}"{/if}/></p>
-
-	<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generateI_token('settings_form')"}"/>
-	</form>
-</section>
-
-<section class="TabContent" id="misc">
-	<form method="post" action="#">
-	<h2 class="TabContent-h2">Misc</h2>
-
-	<p><label for="timezone">Timezone: </label><input type="text" name="timezone" id="timezone" value="{$config->timezone}"/></p>
-	<p>Anonymous access ?
-		<input type="radio" name="anonymous_access" id="anonymous_access_yes" value="1" {if="$config->anonymous_access != 0"}checked="checked"{/if}/><label for="anonymous_access_yes">Yes</label>
-		<input type="radio" name="anonymous_access" id="anonymous_access_no" value="0" {if="$config->anonymous_access == 0"}checked="checked"{/if}/><label for="anonymous_access_no">No</label>
-	</p>
-	<p>Enable URL rewriting ?
-		{if="get_url_rewriting() == 1"}
-			<input type="radio" name="use_rewriting" id="use_rewriting_yes" value="1" {if="$config->use_rewriting != 0"}checked="checked"{/if}/><label for="use_rewriting_yes">Yes</label>
-			<input type="radio" name="use_rewriting" id="use_rewriting_no" value="0" {if="$config->use_rewriting == 0"}checked="checked"{/if}/><label for="use_rewriting_no">No</label>
-		{else}
-			<span class="error"><code>mod_rewrite</code> does not seem to be enabled on your system.</span>
-		{/if}
-	</p>
-	<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generateI_token('settings_form')"}"/>
-	</form>
-</section>
-
-<section class="TabContent" id="importexport">
-	{* Import / Export panel *}
-	<h2 class="TabContent-h2">Import an OPML file</h2>
-	<form method="post" action="#" enctype="multipart/form-data">
-		<input type="hidden" name="MAX_FILE_SIZE" value="1048576" />
-		<p><label for="import">OPML file: </label><input type="file" name="import" id="import"/></p>
-		<p>Import article tags as well (may import a lot of tags, depending the feed) ? <input type="radio" name="import_tags_opml" value="1" id="import_tags_yes" {$config->import_tags_from_feeds != 0 ? 'checked="checked"' : ''}/><label for="import_tags_yes"> Yes</label> <input type="radio" name="import_tags_opml" value="0" id="import_tags_no" {$config->import_tags_from_feeds == 0 ? 'checked="checked"' : ''}/><label for="import_tags_no"> No</label></p>
-		<p>
-			<input class="Button" type="submit" value="Import"/>
-			<input type="hidden" name="token" value="{function="generate_token('import_form')"}"/>
-		</p>
-	</form>
-	<h2 class="TabContent-h2">Export as OPML</h2>
-	<form method="post" action="#">
-		<p>
-			<label for="export">Export selected feeds (ctrl+click to select multiple):</label><br/>
-			<select name="export[]" id="export" multiple>
+<article class="TabContent" id="feedManagement">
+	<section class="SettingsSection">
+		<h2 class="TabContent-h2">Add a feed</h2>
+		<form method="post" action="#">
+			<p><input type="text" name="feed_url" id="feed_url" placeholder="Feed URL"/></p>
+			<p>Import tags as well? <input type="radio" name="import_tags_add" value="1" id="import_tags_yes" {$config->import_tags_from_feeds != 0 ? 'checked="checked"' : ''}/><label for="import_tags_yes"> Yes</label> <input type="radio" name="import_tags_add" value="0" id="import_tags_no" {$config->import_tags_from_feeds == 0 ? 'checked="checked"' : ''}/><label for="import_tags_no"> No</label></p>
+			<p>
+				<label for="feed_post">POST data to send to have access to the feed (JSON formatted)</label><br/>
+				<textarea name="feed_post" id="feed_post"></textarea>
+			</p>
+			<p><input class="Button" type="submit" value="Add feed"/><input type="hidden" name="token" value="{function="generate_token('add_feed')"}"/></p>
+		</form>
+	</section>
+	<section class="SettingsSection">
+		<h2 class="TabContent-h2">List of available feeds</h2>
+		{if="count($feeds) > 0"}
+			<table>
+				{$delete_feed_token=generate_token('delete_feed')}
+				{$refresh_feed_token=generate_token('refresh_feed')}
 				{loop="$feeds"}
-					<option value="{$value['id']}">{$value['title']}</option>
+					<tr>
+						<td>{$value['title']}</td>
+						<td><a href="{$value['url']}">{$value['url']}</a></td>
+						<td>Edit</td>
+						<td><a href="settings.php?delete_feed={$value['id']}&amp;token={$delete_feed_token}">Delete</a></td>
+						<td><a href="settings.php?refresh_feed={$value['id']}&amp;token={$refresh_feed_token}">Refresh</a></td>
+					</tr>
 				{/loop}
-			</select>
+			</table>
+		{else}
+			<p>You did not add any feeds yet.</p>
+		{/if}
+	</section>
+</article>
+
+<article class="TabContent" name="synchronization" id="synchronization">
+	<section class="SettingsSection">
+		<h2 class="TabContent-h2">Sync</h2>
+		<form method="post" action="#">
+			<p>
+				<input type="radio" name="synchronization_type" id="synchronization_type_ajax" value="ajax" {if="$config->synchronization_type == 'ajax'"} checked="checked"{/if}/><label for="synchronization_type_ajax"> Ajax</label><br/>
+				Update the feeds in the background at each page call.
+			</p>
+			<p>
+				<input type="radio" name="synchronization_type" id="synchronization_type_cron" value="cron" {if="$config->synchronization_type == 'cron'"} checked="checked"{/if}/><label for="synchronization_type_cron"> Cron</label><br/>
+				Use a crontask to update the feeds regularly.
+			</p>
+
+		<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generateI_token('settings_form')"}"/>
+		</form>
+	</section>
+</article>
+
+<article class="TabContent" id="template">
+	<section class="SettingsSection">
+		<h2 class="TabContent-h2">Template</h2>
+		<form method="post" action="#">	
+			<p>
+				<label for="template">Template: </label>
+				<select name="template" id="template">
+					{loop="$templates"}
+						<option value="{$value['path']}" {if="$value['current']"}selected="selected"{/if}>{$value['name']}</option>
+					{/loop}
+				</select>
+			</p>
+			<p>
+				Display entries: <br/>
+				<input type="radio" name="display_entries" id="display_entries_full" value="content" {if="$config->display_entries == 'content'"}checked="checked"{/if}/><label for="display_entries_full">Full entry</label><br/>
+				<input type="radio" name="display_entries" id="display_entries_desc" value="description" {if="$config->display_entries == 'description'"}checked="checked"{/if}/><label for="display_entries_desc">Only the description</label><br/>
+				<input type="radio" name="display_entries" id="display_entries_titles" value="title" {if="$config->display_entries == 'title'"}checked="checked"{/if}/><label for="display_entries_titles">Only titles</label>
+			</p>
+
+		<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generateI_token('settings_form')"}"/>
+		</form>
+	</section>
+</article>
+
+<article class="TabContent" id="user">
+	<section class="SettingsSection">
+		<h2 class="TabContent-h2">User</h2>
+		<form method="post" action="#">
+			<p>Leave these fields blank if you don't want to change your password.</p>
+			<p><label for="password">Password: </label><input type="password" name="password" id="password"/></p>
+			<p><label for="password_check">Password (confirmation): </label><input type="password" name="password_check" id="password_check"/></p>
+		
+		<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generateI_token('settings_form')"}"/>
+		</form>
+	</section>
+</article>
+
+<article class="TabContent" id="entries">
+	<section class="SettingsSection">
+		<h2 class="TabContent-h2">Entries</h2>
+		<form method="post" action="#">
+			<p>Tag entries from the tags in the feeds?
+				<input type="radio" name="import_tags_from_feeds" id="import_tags_from_feeds_yes" value="1" {if="$config->import_tags_from_feeds != 0"}checked="checked"{/if}/><label for="import_tags_from_feeds_yes">Yes</label>
+				<input type="radio" name="import_tags_from_feeds" id="import_tags_from_feeds_no" value="0" {if="$config->import_tags_from_feeds == 0"}checked="checked"{/if}/><label for="import_tags_from_feeds_no">No</label>
+			</p>
+			<p>
+				<label for="entries_to_keep">Number of entries to keep per feed (0 to keep all entries):</label>
+				<input type="number" name="entries_to_keep" id="entries_to_keep" value="{$config->entries_to_keep}"/>
+			</p>
+			<p>
+				<label for="entries_per_page">Entries per page:</label>
+				<input type="number" name="entries_per_page" id="entries_per_page" value="{$config->entries_per_page}"/>
+			</p>
+
+		<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generateI_token('settings_form')"}"/>
+		</form>
+	</section>
+</article>
+
+<article class="TabContent" id="sharing">
+	<section class="SettingsSection">
+		<h2 class="TabContent-h2">Sharing</h2>
+		<form method="post" action="#">
+			<p><label for="share_input_facebook">Facebook: </label><input type="checkbox" name="share_input_facebook" id="share_input_facebook" {if="$config->facebook_share > 0"}checked="checked"{/if} value="1"/></p>
+			<p><label for="share_input_twitter">Twitter: </label><input type="checkbox" name="share_input_twitter" id="share_input_twitter" {if="$config->twitter_share > 0"}checked="checked"{/if} value="1"/></p>
+			<p><label for="share_input_shaarli">Shaarli: </label><input type="text" name="share_input_shaarli" id="share_input_shaarli" placeholder="URL of your shaarli" {if="!empty($config->shaarli_share)"}value="{$config->shaarli_share}"{/if}/></p>
+			<p><label for="share_input_diaspora">Diaspora: </label><input type="text" name="share_input_diaspora" id="share_input_diaspora" placeholder="URL of your pod" {if="!empty($config->diaspora_share)"}value="{$config->diaspora_share}"{/if}/></p>
+
+		<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generateI_token('settings_form')"}"/>
+		</form>
+	</section>
+</article>
+
+<article class="TabContent" id="misc">
+	<section class="SettingsSection">
+		<h2 class="TabContent-h2">Misc</h2>
+		<form method="post" action="#">
+		<p><label for="timezone">Timezone: </label><input type="text" name="timezone" id="timezone" value="{$config->timezone}"/></p>
+		<p>Anonymous access ?
+			<input type="radio" name="anonymous_access" id="anonymous_access_yes" value="1" {if="$config->anonymous_access != 0"}checked="checked"{/if}/><label for="anonymous_access_yes">Yes</label>
+			<input type="radio" name="anonymous_access" id="anonymous_access_no" value="0" {if="$config->anonymous_access == 0"}checked="checked"{/if}/><label for="anonymous_access_no">No</label>
 		</p>
-		<p>
-			<input class="Button" type="submit" value="Export"/>
-			<input type="hidden" name="token" value="{function="generate_token('export_form')"}"/>
+		<p>Enable URL rewriting ?
+			{if="get_url_rewriting() == 1"}
+				<input type="radio" name="use_rewriting" id="use_rewriting_yes" value="1" {if="$config->use_rewriting != 0"}checked="checked"{/if}/><label for="use_rewriting_yes">Yes</label>
+				<input type="radio" name="use_rewriting" id="use_rewriting_no" value="0" {if="$config->use_rewriting == 0"}checked="checked"{/if}/><label for="use_rewriting_no">No</label>
+			{else}
+				<span class="error"><code>mod_rewrite</code> does not seem to be enabled on your system.</span>
+			{/if}
 		</p>
-	</form>
-</section>
+		<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generateI_token('settings_form')"}"/>
+		</form>
+	<h2 class="TabContent-h2">Misc</h2>
+</article>
+
+<article class="TabContent" id="importexport">
+	<section class="SettingsSection">
+		<h2 class="TabContent-h2">Import an OPML file</h2>
+		<form method="post" action="#" enctype="multipart/form-data">
+			<input type="hidden" name="MAX_FILE_SIZE" value="1048576" />
+			<p><label for="import">OPML file: </label><input type="file" name="import" id="import"/></p>
+			<p>Import article tags as well (may import a lot of tags, depending the feed) ? <input type="radio" name="import_tags_opml" value="1" id="import_tags_yes" {$config->import_tags_from_feeds != 0 ? 'checked="checked"' : ''}/><label for="import_tags_yes"> Yes</label> <input type="radio" name="import_tags_opml" value="0" id="import_tags_no" {$config->import_tags_from_feeds == 0 ? 'checked="checked"' : ''}/><label for="import_tags_no"> No</label></p>
+			<p>
+				<input class="Button" type="submit" value="Import"/>
+				<input type="hidden" name="token" value="{function="generate_token('import_form')"}"/>
+			</p>
+		</form>
+		<h2 class="TabContent-h2">Export as OPML</h2>
+		<form method="post" action="#">
+			<p>
+				<label for="export">Export selected feeds (ctrl+click to select multiple):</label><br/>
+				<select name="export[]" id="export" multiple>
+					{loop="$feeds"}
+						<option value="{$value['id']}">{$value['title']}</option>
+					{/loop}
+				</select>
+			</p>
+			<p>
+				<input class="Button" type="submit" value="Export"/>
+				<input type="hidden" name="token" value="{function="generate_token('export_form')"}"/>
+			</p>
+		</form>
+	</section>
+</article>
 
 {include="_end"}
