--- a/tpl/default/login.html
+++ b/tpl/default/login.html
@@ -8,7 +8,7 @@
 	</header>
 	<div>
 		<label for="login" class="hidden" >Login</label>
-		<input class="LoginForm-input" type="text" name="login" id="login" placeholder="Login"/>
+		<input class="LoginForm-input" type="text" name="login" id="login" placeholder="Login" autofocus />
 	</div>
 	<div>
 		<label for="password" class="hidden">Password</label>
