--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -2,28 +2,40 @@
 
 <nav>
 	<ul class="Tabs">
-		<li class="OneTab currentTab"> <a class="OneTab-a" data-targetid="feedManagement" href="settings.php#feedManagement">Feeds</a></li>
-		<li class="OneTab"> <a class="OneTab-a" data-targetid="synchronization" href="settings.php#synchronization">Sync</a></li>
-		<li class="OneTab"> <a class="OneTab-a" data-targetid="template" href="settings.php#template">Template</a></li>
-		<li class="OneTab"> <a class="OneTab-a" data-targetid="user" href="settings.php#user">User</a></li>
-		<li class="OneTab"> <a class="OneTab-a" data-targetid="entries" href="settings.php#entries">Entries</a></li>
-		<li class="OneTab"> <a class="OneTab-a" data-targetid="sharing" href="settings.php#sharing">Sharing</a></li>
-		<li class="OneTab"> <a class="OneTab-a" data-targetid="misc" href="settings.php#misc">Misc</a></li>
-		<li class="OneTab"> <a class="OneTab-a" data-targetid="importexport" href="settings.php#importexport">Import Export</a></li>
+		<li class="OneTab currentTab"> <a class="OneTab-a" data-targetid="feedManagement" href="settings.php#feedManagement" alt="Add new feeds and modify existing ones">Feeds</a></li>
+		<li class="OneTab"> <a class="OneTab-a" data-targetid="synchronization" href="settings.php#synchronization" alt="Set how feeds are synchronize">Sync</a></li>
+		<li class="OneTab"> <a class="OneTab-a" data-targetid="template" href="settings.php#template" alt="Set global appearance">Template</a></li>
+		<li class="OneTab"> <a class="OneTab-a" data-targetid="user" href="settings.php#user" alt="Modify user info">User</a></li>
+		<li class="OneTab"> <a class="OneTab-a" data-targetid="entries" href="settings.php#entries" alt="Set entry storing options">Entries</a></li>
+		<li class="OneTab"> <a class="OneTab-a" data-targetid="sharing" href="settings.php#sharing" alt="Customize sharing links">Sharing</a></li>
+		<li class="OneTab"> <a class="OneTab-a" data-targetid="misc" href="settings.php#misc" alt="Other settings">Misc</a></li>
+		<li class="OneTab"> <a class="OneTab-a" data-targetid="importexport" href="settings.php#importexport" alt="Import and export feeds">Import Export</a></li>
 	</ul>
 </nav>
 
-<article class="TabContent currentTabContent" id="feedManagement" {if="$current_tab != 'feedManagement'"}style="display: none;"{/if}>
+<article class="TabContent currentTabContent" {if="$current_tab != 'feedManagement'"}style="display: none;"{/if}>
+	<div class="TabContent-anchor" id="feedManagement"></div>
 	<section class="SettingsSection">
 		<h2 class="TabContent-h2">Add a feed</h2>
 		<form method="post" action="#">
-			<p><input class="grey" type="text" name="feed_url" id="feed_url" placeholder="Feed URL"/></p>
-			<p>Import tags as well? <input type="radio" name="import_tags_add" value="1" id="import_tags_yes" {$config->import_tags_from_feeds != 0 ? 'checked="checked"' : ''}/><label for="import_tags_yes"> Yes</label> <input type="radio" name="import_tags_add" value="0" id="import_tags_no" {$config->import_tags_from_feeds == 0 ? 'checked="checked"' : ''}/><label for="import_tags_no"> No</label></p>
-			<p>
-				<label for="feed_post">POST data to send to have access to the feed (JSON formatted)</label><br/>
-				<textarea name="feed_post" id="feed_post"></textarea>
-			</p>
-			<p><input class="Button" type="submit" value="Add feed"/><input type="hidden" name="token" value="{function="generate_token('add_feed')"}"/></p>
+			<div class="FormItem">
+				<input class="grey" type="text" name="feed_url" id="feed_url" placeholder="Feed URL" autofocus />
+			</div>
+			<div class="FormItem Toggle">
+				<span class="Toggle-btn">Options</span>
+				<div class="Toggle-content">
+					<div class="FormItem">
+						Import tags as well? <input type="radio" name="import_tags_add" value="1" id="import_tags_yes" {$config->import_tags_from_feeds != 0 ? 'checked="checked"' : ''}/><label for="import_tags_yes"> Yes</label> <input type="radio" name="import_tags_add" value="0" id="import_tags_no" {$config->import_tags_from_feeds == 0 ? 'checked="checked"' : ''}/><label for="import_tags_no"> No</label>
+					</div>
+					<div class="FormItem">
+						<label for="feed_post">POST data to send to have access to the feed (JSON formatted)</label><br/>
+						<textarea name="feed_post" id="feed_post"></textarea>
+					</div>
+				</div>
+			</div>
+			<div class="FormItem">
+				<input class="Button" type="submit" value="Add feed"/><input type="hidden" name="token" value="{function="generate_token('add_feed')"}"/>
+			</div>
 		</form>
 	</section>
 	<section class="SettingsSection">
@@ -48,25 +60,27 @@
 	</section>
 </article>
 
-<article class="TabContent" id="synchronization" {if="$current_tab == 'synchronization'"}style="display: block;"{/if}>
+<article class="TabContent" {if="$current_tab == 'synchronization'"}style="display: block;"{/if}>
+	<div class="TabContent-anchor" id="synchronization"></div>
 	<section class="SettingsSection">
 		<h2 class="TabContent-h2">Sync</h2>
 		<form method="post" action="#">
-			<p>
+			<div class="FormItem">
 				<input type="radio" name="synchronization_type" id="synchronization_type_ajax" value="ajax" {if="$config->synchronization_type == 'ajax'"} checked="checked"{/if}/><label for="synchronization_type_ajax"> Ajax</label><br/>
-				Update the feeds in the background at each page call.
-			</p>
-			<p>
+				<p class="FormItem-hint">Update the feeds in the background at each page call.</p>
+			</div>
+			<div class="FormItem">
 				<input type="radio" name="synchronization_type" id="synchronization_type_cron" value="cron" {if="$config->synchronization_type == 'cron'"} checked="checked"{/if}/><label for="synchronization_type_cron"> Cron</label><br/>
-				Use a crontask to update the feeds regularly.
-			</p>
+				<p class="FormItem-hint">Use a crontask to update the feeds regularly.</p>
+			</div>
 
 		<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generate_token('settings_form_sync')"}"/>
 		</form>
 	</section>
 </article>
 
-<article class="TabContent" id="template" {if="$current_tab == 'template'"}style="display: block;"{/if}>
+<article class="TabContent" {if="$current_tab == 'template'"}style="display: block;"{/if}>
+	<div class="TabContent-anchor" id="template"></div>
 	<section class="SettingsSection">
 		<h2 class="TabContent-h2">Template</h2>
 		<form method="post" action="#">
@@ -96,103 +110,120 @@
 	</section>
 </article>
 
-<article class="TabContent" id="user" {if="$current_tab == 'user'"}style="display: block;"{/if}>
+<article class="TabContent" {if="$current_tab == 'user'"}style="display: block;"{/if}>
+	<div class="TabContent-anchor" id="user"></div>
 	<section class="SettingsSection">
 		<h2 class="TabContent-h2">User</h2>
 		<form method="post" action="#">
 			<p>Leave these fields blank if you don't want to change your password.</p>
-			<p><label for="password">Password: </label><input type="password" name="password" id="password"/></p>
-			<p><label for="password_check">Password (confirmation): </label><input type="password" name="password_check" id="password_check"/></p>
+			<p><input type="password" class="grey" name="password" id="password" placeholder="Password" /></p>
+			<p><input type="password" class="grey" name="password_check" id="password_check" placeholder="Password (again)" /> </p>
 
 		<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generate_token('settings_form_user')"}"/>
 		</form>
 	</section>
 </article>
 
-<article class="TabContent" id="entries" {if="$current_tab == 'entries'"}style="display: block;"{/if}>
+<article class="TabContent" {if="$current_tab == 'entries'"}style="display: block;"{/if}>
+	<div class="TabContent-anchor" id="entries"></div>
 	<section class="SettingsSection">
 		<h2 class="TabContent-h2">Entries</h2>
 		<form method="post" action="#">
-			<p>Tag entries from the tags in the feeds?
+			<div class="FormItem">
+				Tag entries from the tags in the feeds?
 				<input type="radio" name="import_tags_from_feeds" id="import_tags_from_feeds_yes" value="1" {if="$config->import_tags_from_feeds != 0"}checked="checked"{/if}/><label for="import_tags_from_feeds_yes">Yes</label>
 				<input type="radio" name="import_tags_from_feeds" id="import_tags_from_feeds_no" value="0" {if="$config->import_tags_from_feeds == 0"}checked="checked"{/if}/><label for="import_tags_from_feeds_no">No</label>
-			</p>
-			<p>
-				<label for="entries_to_keep">Number of entries to keep per feed (0 to keep all entries):</label>
+			</div>
+			<div class="FormItem">
+				<label for="entries_to_keep">Number of entries to store per feed:</label>
 				<input type="number" name="entries_to_keep" id="entries_to_keep" value="{$config->entries_to_keep}"/>
-			</p>
-			<p>
+				<p class="FormItem-hint">Set it to 0 to store all entries.</p>
+			</div>
+			<div class="FormItem">
 				<label for="entries_per_page">Entries per page:</label>
 				<input type="number" name="entries_per_page" id="entries_per_page" value="{$config->entries_per_page}"/>
-			</p>
+			</div>
 
 		<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generate_token('settings_form_entries')"}"/>
 		</form>
 	</section>
 </article>
 
-<article class="TabContent" id="sharing" {if="$current_tab == 'sharing'"}style="display: block;"{/if}>
+<article class="TabContent" {if="$current_tab == 'sharing'"}style="display: block;"{/if}>
+	<div class="TabContent-anchor" id="sharing"></div>
 	<section class="SettingsSection">
 		<h2 class="TabContent-h2">Sharing</h2>
 		<form method="post" action="#">
 			<p><label for="share_input_facebook">Facebook: </label><input type="checkbox" name="share_input_facebook" id="share_input_facebook" {if="$config->facebook_share > 0"}checked="checked"{/if} value="1"/></p>
 			<p><label for="share_input_twitter">Twitter: </label><input type="checkbox" name="share_input_twitter" id="share_input_twitter" {if="$config->twitter_share > 0"}checked="checked"{/if} value="1"/></p>
-			<p><label for="share_input_shaarli">Shaarli: </label><input type="text" name="share_input_shaarli" id="share_input_shaarli" placeholder="URL of your shaarli" {if="!empty($config->shaarli_share)"}value="{$config->shaarli_share}"{/if}/></p>
-			<p><label for="share_input_wallabag">Wallabag: </label><input type="text" name="share_input_wallabag" id="share_input_wallabag" placeholder="URL of your Wallabag" {if="!empty($config->wallabag_share)"}value="{$config->wallabag_share}"{/if}/></p>
-			<p><label for="share_input_diaspora">Diaspora: </label><input type="text" name="share_input_diaspora" id="share_input_diaspora" placeholder="URL of your pod" {if="!empty($config->diaspora_share)"}value="{$config->diaspora_share}"{/if}/></p>
+			<p><label for="share_input_shaarli">Shaarli: </label><input type="text" class="grey" name="share_input_shaarli" id="share_input_shaarli" placeholder="URL of your shaarli" {if="!empty($config->shaarli_share)"}value="{$config->shaarli_share}"{/if}/></p>
+			<p><label for="share_input_wallabag">Wallabag: </label><input type="text" class="grey" name="share_input_wallabag" id="share_input_wallabag" placeholder="URL of your Wallabag" {if="!empty($config->wallabag_share)"}value="{$config->wallabag_share}"{/if}/></p>
+			<p><label for="share_input_diaspora">Diaspora: </label><input type="text" class="grey" name="share_input_diaspora" id="share_input_diaspora" placeholder="URL of your pod" {if="!empty($config->diaspora_share)"}value="{$config->diaspora_share}"{/if}/></p>
 
 		<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generate_token('settings_form_sharing')"}"/>
 		</form>
 	</section>
 </article>
 
-<article class="TabContent" id="misc" {if="$current_tab == 'misc'"}style="display: block;"{/if}>
+<article class="TabContent" {if="$current_tab == 'misc'"}style="display: block;"{/if}>
+	<div class="TabContent-anchor" id="misc"></div>
 	<section class="SettingsSection">
 		<h2 class="TabContent-h2">Misc</h2>
 		<form method="post" action="#">
-		<p><label for="timezone">Timezone: </label><input type="text" name="timezone" id="timezone" value="{$config->timezone}"/></p>
-		<p>Anonymous access ?
+		<p><label for="timezone">Timezone: </label><input type="text" class="grey" name="timezone" id="timezone" value="{$config->timezone}"/></p>
+		<div class="FormItem">
+			Anonymous access ?
 			<input type="radio" name="anonymous_access" id="anonymous_access_yes" value="1" {if="$config->anonymous_access != 0"}checked="checked"{/if}/><label for="anonymous_access_yes">Yes</label>
 			<input type="radio" name="anonymous_access" id="anonymous_access_no" value="0" {if="$config->anonymous_access == 0"}checked="checked"{/if}/><label for="anonymous_access_no">No</label>
-		</p>
-		<p>Enable URL rewriting ?
+			<p class="FormItem-hint">If set to Yes, everyone can see your feeds. You can block some feeds only.</p>
+		</div>
+		<div class="FormItem">
+			Enable URL rewriting ?
 			{if="get_url_rewriting() == 1"}
 				<input type="radio" name="use_rewriting" id="use_rewriting_yes" value="1" {if="$config->use_rewriting != 0"}checked="checked"{/if}/><label for="use_rewriting_yes">Yes</label>
 				<input type="radio" name="use_rewriting" id="use_rewriting_no" value="0" {if="$config->use_rewriting == 0"}checked="checked"{/if}/><label for="use_rewriting_no">No</label>
+				<p class="FormItem-hint">Set it to yes to get prettier URLs. This might require some server settings.</p>
 			{else}
 				<span class="error"><code>mod_rewrite</code> does not seem to be enabled on your system.</span>
 			{/if}
-		</p>
+		</div>
 		<input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generate_token('settings_form_misc')"}"/>
 		</form>
 </article>
 
-<article class="TabContent" id="importexport" {if="$current_tab == 'importexport'"}style="display: block;"{/if}>
+<article class="TabContent" {if="$current_tab == 'importexport'"}style="display: block;"{/if}>
+	<div class="TabContent-anchor" id="importexport"></div>
 	<section class="SettingsSection">
 		<h2 class="TabContent-h2">Import an OPML file</h2>
 		<form method="post" action="#" enctype="multipart/form-data">
 			<input type="hidden" name="MAX_FILE_SIZE" value="1048576" />
-			<p><label for="import">OPML file: </label><input type="file" name="import" id="import"/></p>
-			<p>Import article tags as well (may import a lot of tags, depending the feed) ? <input type="radio" name="import_tags_opml" value="1" id="import_tags_yes" {$config->import_tags_from_feeds != 0 ? 'checked="checked"' : ''}/><label for="import_tags_yes"> Yes</label> <input type="radio" name="import_tags_opml" value="0" id="import_tags_no" {$config->import_tags_from_feeds == 0 ? 'checked="checked"' : ''}/><label for="import_tags_no"> No</label></p>
-			<p>
+			<div class="FormItem">
+				<label for="import">OPML file: </label><input type="file" name="import" id="import"/>
+			</div>
+			<div class="FormItem">
+				Import article tags as well ? <input type="radio" name="import_tags_opml" value="1" id="import_tags_yes" {$config->import_tags_from_feeds != 0 ? 'checked="checked"' : ''}/><label for="import_tags_yes"> Yes</label> <input type="radio" name="import_tags_opml" value="0" id="import_tags_no" {$config->import_tags_from_feeds == 0 ? 'checked="checked"' : ''}/><label for="import_tags_no"> No</label>
+				<p class="FormItem-hint">It may import a lot of tags on some feed.</p>
+			</div>
+			<div class="FormItem">
 				<input class="Button" type="submit" value="Import"/>
 				<input type="hidden" name="token" value="{function="generate_token('import_form')"}"/>
-			</p>
+			</div>
 		</form>
 		<h2 class="TabContent-h2">Export as OPML</h2>
 		<form method="post" action="#">
-			<p>
-				<label for="export">Export selected feeds (ctrl+click to select multiple):</label><br/>
+			<div class="FormItem">
+				<label for="export">Export selected feeds:</label><br/>
 				<select name="export[]" id="export" multiple>
 					{loop="$feeds"}
 						<option value="{$value['id']}">{$value['title']}</option>
 					{/loop}
 				</select>
-			</p>
-			<p>
+				<p class="FormItem-hint">ctrl+click to select multiple feeds.</p>
+			</div>
+			<div class="FormItem">
 				<input class="Button" type="submit" value="Export"/>
 				<input type="hidden" name="token" value="{function="generate_token('export_form')"}"/>
-			</p>
+			</div>
 		</form>
 	</section>
 </article>
